<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">Health Information Finder</string>
	<string name="search_hint">Search MedlinePlus</string>
	<string name="feedback">Feedback</string>
	<string name="privacy">Privacy Policy</string>
	<string name="agreement">User Agreement</string>
	<string name="about">About</string>
	<string name="back">Back</string>
	<string name="setting">Settings</string>
	<string name="loading">Loading...</string>
	<string name="information">Information is from <b> </b></string>
	<string name="condition">Condition:  <br/>
The above copyright notice and this permission 
Notice shall be
Include in all copies or sustainable portion of the 
software 

The Software is provided \"as is\",
Without warranty of ANY KIND
Express s or  implied including but not limited to the warranties of  mearchantability.
  </string>
  <string name="medlineurl"><u>MedlinePlus.gov</u></string>
</resources>