<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="#e2eef2"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/backgr" >


        <Button android:textColor="#FFFFFF" android:textStyle="bold" android:textSize="13sp"
            android:id="@+id/done" android:text="Done"
            android:layout_width="55dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/bluebtn"
             />

        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:id="@+id/relative">

			<TableLayout
			    android:id="@+id/follow_us"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_centerHorizontal="true"
			    android:layout_marginLeft="10dip"
			    android:layout_marginRight="10dip"
			    android:layout_marginTop="50dip"
			    android:background="@drawable/listback"
			    android:stretchColumns="1" >

				<TableRow android:id="@+id/feedback" android:layout_width="fill_parent"
					android:layout_marginBottom="8dip" android:layout_marginTop="5dp">
					<TextView android:text="@string/feedback" 
						android:layout_width="wrap_content" android:textStyle="bold"
						android:textColor="#000000" android:layout_marginLeft="5dip"
						android:textSize="16sp" android:layout_height="wrap_content"
						android:layout_gravity="center_vertical" />
					<ImageView android:layout_width="wrap_content"
						android:src="@drawable/arrow"
						android:layout_gravity="right|center_vertical"
						android:layout_height="wrap_content"></ImageView>
				</TableRow>
				<View android:layout_height="1dip" android:background="#A9ABAD"
					android:layout_width="fill_parent" />
				<TableRow android:id="@+id/privacy"
					android:layout_marginTop="8dip" android:layout_marginBottom="8dip">
					<TextView android:text="@string/privacy"
						android:layout_width="wrap_content" android:textStyle="bold"
						android:textColor="#000000" android:layout_marginLeft="5dip"
						android:textSize="16sp" android:layout_height="wrap_content"
						android:layout_gravity="center_vertical" />
					<ImageView android:layout_width="wrap_content"
						android:layout_marginRight="10dip" android:src="@drawable/arrow"
						android:layout_gravity="right|center_vertical" android:layout_height="wrap_content"></ImageView>
				</TableRow>
				
				    
				    <View android:layout_height="1dip" android:background="#A9ABAD"
					android:layout_width="wrap_content" />

				<TableRow
				    android:id="@+id/user_agrrement"
				    android:layout_marginBottom="8dip"
				    android:layout_marginTop="8dip" >

					<TextView android:text="@string/agreement"
						android:layout_width="wrap_content" android:textStyle="bold"
						android:textColor="#000000" android:layout_marginLeft="5dip"
						android:textSize="16sp" android:layout_height="wrap_content"
						android:layout_gravity="center_vertical" />
					<ImageView android:layout_width="wrap_content"
						android:layout_marginRight="10dip" android:src="@drawable/arrow"
						android:layout_gravity="right|center_vertical" android:layout_height="wrap_content"></ImageView>
				</TableRow>
				
				   <View android:layout_height="1dip" android:background="#A9ABAD"
					android:layout_width="wrap_content" />
				<TableRow android:id="@+id/About"
					android:layout_marginTop="8dip" android:layout_marginBottom="5dp">
					<TextView android:text="@string/about"
						android:layout_width="wrap_content" android:textStyle="bold"
						android:textColor="#000000" android:layout_marginLeft="5dip"
						android:textSize="16sp" android:layout_height="wrap_content"
						android:layout_gravity="center_vertical" />
					<ImageView android:layout_width="wrap_content"
						android:layout_marginRight="10dip" android:src="@drawable/arrow"
						android:layout_gravity="right|center_vertical" android:layout_height="wrap_content"></ImageView>
				</TableRow>
			</TableLayout>
		</RelativeLayout>
</LinearLayout>